--- a/style.css
+++ b/style.css
@@ -54,13 +54,13 @@ body {
     cursor: pointer;
 }
 
-.firstTask {
+.first-task {
     width: 700px;
     padding: 15px 10px;
     background: #ededed;
 }
 
-.firstTask__form {
+.first-task__form {
     margin-top: 25px;
 }
 
@@ -110,7 +110,7 @@ body {
 
 }
 
-.secondTask {
+.second-task {
     margin: 25px 0;
 }
 
@@ -225,27 +225,44 @@ body {
     opacity: 1;
     transform: translateX(0);
     visibility: visible;
-    webkit-transform: translateX(0);
 }
 
 .overlay {
-    display: none;
+    opacity: 0;
     position: fixed;
     left: 0;
     top:0;
     width: 100vw;
     height: 100vh;
     background: #5a4b4bdb;
-    z-index: 1;
+    z-index: -1;
+    
 }
 
 .overlay--active {
-    display: block;
+    opacity: 1;
+    z-index: 1;
+    animation: animation-overlay .5s ease 1;
 }
+
+
+
+  
+  @keyframes animation-overlay {   
+    0% {     
+      opacity: 0;   
+    }   
+    50% {     
+        opacity: 0.5;   
+    } 
+    100% {
+        opacity: 1;
+    }
+  }
 
 /* tab  */
 
-.thirdTask {
+.third-task {
     padding: 10px;
     background: #f3f7fa;
 }
